--- a/IDCA.Client/App.xaml
+++ b/IDCA.Client/App.xaml
@@ -6,34 +6,43 @@
         <Style x:Key="WindowShadowStyle" TargetType="Window">
             <Setter Property="Background" Value="#FFEEEEF2"/>
             <Setter Property="AllowsTransparency" Value="True"/>
-            <Setter Property="BorderThickness" Value="10"/>
+            <Setter Property="BorderThickness" Value="5"/>
             <Setter Property="Effect">
                 <Setter.Value>
-                    <DropShadowEffect ShadowDepth="0" Opacity="0.7" BlurRadius="10"/>
+                    <DropShadowEffect ShadowDepth="0" Opacity="0.7" BlurRadius="5"/>
                 </Setter.Value>
             </Setter>
         </Style>
-        <Style x:Key="GuidLabelStyle" TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="思源黑体"/>
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
+        <Style x:Key="BaseLabelFontFamilyStyle" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="微软雅黑"/>
         </Style>
-        <Style x:Key="GuidTextBoxStyle" TargetType="TextBox">
-            <Setter Property="Height" Value="35"/>
-            <Setter Property="Width" Value="590"/>
-            <Setter Property="FontFamily" Value="思源黑体"/>
-            <Setter Property="FontSize" Value="20"/>
+        <Style x:Key="BaseTextBoxFontFamilyStyle" TargetType="TextBox">
+            <Setter Property="FontFamily" Value="Calibri"/>
+        </Style>
+        <Style x:Key="GuidLabelStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseLabelFontFamilyStyle}">
+            <Setter Property="FontSize" Value="16"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="GuidTextBoxStyle" TargetType="TextBox" BasedOn="{StaticResource BaseTextBoxFontFamilyStyle}">
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="590"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="TextBoxAlignmentStyle" TargetType="TextBox">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
         <Style x:Key="BaseStyle">
             <Setter Property="Control.Background" Value="#FFEEEEF2"/>
         </Style>
-        <Style x:Key="TableSettingTextBoxStyle">
-            <Setter Property="TextBlock.Height" Value="42"/>
-            <Setter Property="TextBlock.FontFamily" Value="思源黑体" />
-            <Setter Property="TextBlock.FontSize" Value="25"/>
-            <Setter Property="TextBlock.VerticalAlignment" Value="Center"/>
+        <Style x:Key="TableSettingTextBoxStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseLabelFontFamilyStyle}">
+            <Setter Property="Height" Value="42"/>
+            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
         <Style x:Key="HeaderSizeStyle" TargetType="Button" BasedOn="{StaticResource ResourceKey=BaseStyle}">
             <Setter Property="Width" Value="60"/>
