--- a/IDCA.Client/Guid/GuidStartPage.xaml
+++ b/IDCA.Client/Guid/GuidStartPage.xaml
@@ -4,23 +4,52 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:vm="clr-namespace:IDCA.Client.ViewModel"
-      xmlns:control="clr-namespace:IDCA.Client.Control"
       mc:Ignorable="d" 
       d:DesignHeight="500" 
-      d:DesignWidth="1000"
+      d:DesignWidth="850"
       Title="GuidStartPage">
     <Page.DataContext>
         <vm:GuidStartPageViewModel/>
     </Page.DataContext>
     <Page.Resources>
         <DataTemplate DataType="{x:Type vm:TemplateElementViewModel}">
-            <control:TemplateElement/>
+            <Grid Width="480" Height="80">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="10"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="60"/>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="40"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="30"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0"
+                                   FontSize="18" 
+                                   VerticalAlignment="Center" 
+                                   FontStyle="Normal"
+                                   FontWeight="Bold"
+                                    Text="{Binding TemplateName}"/>
+                        <TextBlock Grid.Row="1"
+                                   FontSize="14" 
+                                   TextWrapping="Wrap"
+                                   Foreground="Gray"
+                                   Text="{Binding TemplateDescription}"/>
+                    </Grid>
+                </Grid>
+            </Grid>
         </DataTemplate>
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
-            <RowDefinition Height="400"/>
+            <RowDefinition Height="350"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
@@ -29,18 +58,16 @@
         <Grid Grid.Row="0" Grid.Column="1">
             <TextBlock Text="DataCollection Automation"
                        FontSize="40"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center"
+                       Style="{StaticResource BaseLabelFontFamilyStyle}"/>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="450"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <ListView Grid.Column="1"
-                      Width="400"
-                      Height="350"
+            <ListView Width="500"
+                      Height="300"
+                      Margin="25"
                       HorizontalAlignment="Left"
                       BorderThickness="0"
+                      SelectedIndex="{Binding TemplateSelectedIndex}"
                       Style="{StaticResource ResourceKey=BaseStyle}">
                 <ItemsControl ItemsSource="{Binding TemplateItems}"/>
             </ListView>
