--- a/IDCA.Client/MainWindow.xaml
+++ b/IDCA.Client/MainWindow.xaml
@@ -2,24 +2,29 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:c="clr-namespace:IDCA.Client.ViewModel.Common"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
         d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="" 
-        Height="650" 
-        Width="1000"
+        Height="600" 
+        Width="850"
         WindowStyle="None"
         ResizeMode="NoResize"
-        MouseMove="HeaderMouseMove"
+        MouseLeftButtonDown="HeaderMouseMove"
         Style="{StaticResource ResourceKey=WindowShadowStyle}">
     <Window.DataContext>
         <viewmodel:MainWindowViewModel/>
     </Window.DataContext>
+    <i:Interaction.Behaviors>
+        <c:MainWindowBehavior Close="{Binding MainWindowToClose}"/>
+    </i:Interaction.Behaviors>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
-            <RowDefinition Height="500"/>
+            <RowDefinition Height="450"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
         <!-- 标题栏 -->
@@ -61,7 +66,7 @@
                     VerticalAlignment="Center"
                     IsEnabled="{Binding LastStepEnabled}"
                     Command="{Binding LastStepCommand}">
-                <TextBlock Text="上一步" FontSize="12" FontFamily="思源黑体"/>
+                <TextBlock Text="上一步" FontSize="12" Style="{StaticResource BaseLabelFontFamilyStyle}"/>
             </Button>
             <Button Grid.Column="2" 
                     Height="30" 
@@ -69,7 +74,9 @@
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center"
                     Command="{Binding NextStepCommand}">
-                <TextBlock Text="下一步" FontSize="12" FontFamily="思源黑体"/>
+                <TextBlock Text="{Binding NextButtonText}" 
+                           FontSize="12" 
+                           Style="{StaticResource BaseLabelFontFamilyStyle}"/>
             </Button>
         </Grid>
     </Grid>
