--- a/IDCA.Client/MainWindow.xaml
+++ b/IDCA.Client/MainWindow.xaml
@@ -11,30 +11,16 @@
         Title="" 
         Height="600" 
         Width="850"
-        WindowStyle="None"
         ResizeMode="NoResize"
         MouseLeftButtonDown="HeaderMouseMove"
-        Style="{StaticResource ResourceKey=WindowShadowStyle}">
+        Style="{StaticResource ResourceKey=WindowStyle}">
     <Window.DataContext>
         <viewmodel:MainWindowViewModel/>
     </Window.DataContext>
     <i:Interaction.Behaviors>
         <c:MainWindowBehavior Close="{Binding MainWindowToClose}"/>
     </i:Interaction.Behaviors>
-    <Window.Triggers>
-        <EventTrigger RoutedEvent="Loaded">
-            <BeginStoryboard Storyboard="{StaticResource ResourceKey=ShowWindow}"/>
-        </EventTrigger>
-    </Window.Triggers>
-    <Grid x:Name="MainGrid">
-        <Grid.RenderTransform>
-            <TransformGroup>
-                <ScaleTransform ScaleX="1" ScaleY="1"/>
-                <SkewTransform/>
-                <RotateTransform/>
-                <TranslateTransform/>
-            </TransformGroup>
-        </Grid.RenderTransform>
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition Height="450"/>
