--- a/IDCA.Client/Control/SpecSettingTable.xaml
+++ b/IDCA.Client/Control/SpecSettingTable.xaml
@@ -11,6 +11,70 @@
     <UserControl.DataContext>
         <viewmodel:SpecSettingTableViewModel/>
     </UserControl.DataContext>
+    <UserControl.Resources>
+        <!-- DateGrid 样式 -->
+        <Style TargetType="DataGrid">
+            <Setter Property="AlternationCount" Value="2"/>
+            <Setter Property="RowHeaderWidth" Value="25"/>
+            <Setter Property="AutoGenerateColumns" Value="False"/>
+            <Setter Property="CanUserSortColumns" Value="False"/>
+            <Setter Property="CanUserResizeColumns" Value="False"/>
+            <Setter Property="CanUserResizeRows" Value="True"/>
+            <Setter Property="CanUserAddRows" Value="True"/>
+            <Setter Property="Background" Value="#FFEEEEF2"/>
+            <Setter Property="BorderBrush" Value="#FFEEEEF2"/>
+            <Setter Property="HorizontalGridLinesBrush" Value="#FFEEEEF2"/>
+            <Setter Property="VerticalGridLinesBrush" Value="#FFEEEEF2"/>
+            <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+        </Style>
+        <Style TargetType="DataGridColumnHeader">
+            <Setter Property="FontFamily" Value="微软雅黑"/>
+            <Setter Property="UseLayoutRounding" Value="True"/>
+            <Setter Property="MinWidth" Value="0"/>
+            <Setter Property="MinHeight" Value="15"/>
+            <Setter Property="Background" Value="#FFEEEEF2"/>
+            <Setter Property="Foreground" Value="#FF111111"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Margin" Value="2,0,0,0"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="BorderBrush" Value="LightGray"/>
+        </Style>
+        <!-- DataGrid 行样式 -->
+        <Style TargetType="DataGridRow">
+            <Setter Property="Height" Value="24"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Background" Value="#FFFFFF"/>
+            <Setter Property="Foreground" Value="#FF666666"/>
+            <Style.Triggers>
+                <Trigger Property="AlternationIndex" Value="0">
+                    <Setter Property="Background" Value="#FFFAFAFA"/>
+                </Trigger>
+                <Trigger Property="AlternationIndex" Value="1">
+                    <Setter Property="Background" Value="#FFF5F5F7"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="LightGray"/>
+                </Trigger>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="#FFE3E3E5"/>
+                    <Setter Property="Foreground" Value="#FF111111"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="DataGridRowHeader">
+            <Setter Property="Background" Value="#FFEEEEF2"/>
+        </Style>
+        <Style TargetType="DataGridCell">
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="LightGray"/>
+                    <Setter Property="Foreground" Value="#FF464646"/>
+                    <Setter Property="BorderBrush" Value="LightGray"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
     <Grid ScrollViewer.CanContentScroll="True">
         <DataGrid 
             Name="MainGrid"
@@ -19,18 +83,20 @@
             ItemsSource="{Binding ElementList}"
             d:ItemsSource="{d:SampleData ItemCount=5}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="变量名" Width="100" Binding="{Binding VariableName}"/>
-                <DataGridTextColumn Header="标题" Width="140" Binding="{Binding Title}"/>
-                <DataGridTextColumn Header="基数标签" Width="140" Binding="{Binding BaseText}"/>
-                <DataGridTextColumn Header="基数筛选器" Width="140" Binding="{Binding BaseFilter}"/>
-                <DataGridTemplateColumn Header="轴表达式配置" Width="120">
+                <DataGridTextColumn Header="变量名" Width="120" Binding="{Binding VariableName}"/>
+                <DataGridTextColumn Header="标题" Width="180" Binding="{Binding Title}"/>
+                <DataGridTextColumn Header="基数标签" Width="150" Binding="{Binding BaseText}"/>
+                <DataGridTextColumn Header="基数筛选器" Width="150" Binding="{Binding BaseFilter}"/>
+                <DataGridTemplateColumn Header="轴表达式配置" Width="95">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Canvas>
-                                <Button Content="配置" 
-                                        Width="120" 
-                                        Height="26" 
+                                <Button Content="配置"
+                                        FontSize="12"
+                                        Width="92" 
+                                        Height="22" 
                                         HorizontalAlignment="Center"
+                                        VerticalContentAlignment="Center"
                                         Command="{Binding AxisSettingCommand}"/>
                             </Canvas>
                         </DataTemplate>
