--- a/IDCA.Client/TableMainWindow.xaml
+++ b/IDCA.Client/TableMainWindow.xaml
@@ -7,9 +7,9 @@
         xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel"
         mc:Ignorable="d"
         Title="TableMainWindow" 
-        Height="450" 
-        Width="800"
-        ResizeMode="CanResize"
+        Height="650" 
+        Width="900"
+        ResizeMode="NoResize"
         MouseLeftButtonDown="HeaderMouseMove"
         Style="{StaticResource ResourceKey=WindowStyle}">
     <Window.DataContext>
@@ -25,7 +25,7 @@
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="180"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
             </Grid>
@@ -34,7 +34,7 @@
                     <Button Style="{StaticResource ButtonBaseStyle}" 
                             Template="{StaticResource ResourceKey=MinimizeButtonTemplate}" 
                             Click="MinimizeButtonClick"/>
-                    <Button Style="{StaticResource ButtonBaseStyle}"
+                    <!--<Button Style="{StaticResource ButtonBaseStyle}"
                             Click="MaximizeButtonClick">
                         <Button.Template>
                             <ControlTemplate>
@@ -59,7 +59,7 @@
                                 </Canvas>
                             </ControlTemplate>
                         </Button.Template>
-                    </Button>
+                    </Button>-->
                     <Button Style="{StaticResource ButtonCloseStyle}" 
                             Template="{StaticResource ResourceKey=CrossButtonTemplate}" 
                             Click="CloseButtonClick"/>
