--- a/IDCA.Client/MainWindow.xaml
+++ b/IDCA.Client/MainWindow.xaml
@@ -1,82 +1,24 @@
-﻿<Window x:Class="IDCA.Client.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:c="clr-namespace:IDCA.Client.ViewModel.Common"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
-        d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
-        mc:Ignorable="d"
-        Title="" 
-        Height="600" 
-        Width="850"
-        ResizeMode="NoResize"
-        MouseLeftButtonDown="HeaderMouseMove"
-        Style="{StaticResource ResourceKey=WindowStyle}">
+﻿<mah:MetroWindow x:Class="IDCA.Client.MainWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+                 xmlns:c="clr-namespace:IDCA.Client.ViewModel.Common"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                 xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+                 d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
+                 mc:Ignorable="d"
+                 Title="" 
+                 Height="600" 
+                 Width="850"
+                 ResizeMode="NoResize"
+                 MouseLeftButtonDown="HeaderMouseMove">
     <Window.DataContext>
         <viewmodel:MainWindowViewModel/>
     </Window.DataContext>
     <i:Interaction.Behaviors>
         <c:MainWindowBehavior Close="{Binding MainWindowToClose}"/>
     </i:Interaction.Behaviors>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="450"/>
-            <RowDefinition Height="60"/>
-        </Grid.RowDefinitions>
-        <!-- 标题栏 -->
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="120"/>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0">
-            </Grid>
-            <Grid Grid.Column="1">
-                <StackPanel Orientation="Horizontal">
-                    <Button Style="{StaticResource ButtonBaseStyle}" 
-                            Template="{StaticResource ResourceKey=MinimizeButtonTemplate}" 
-                            Click="MinimizeButtonClick"/>
-                    <Button Style="{StaticResource ButtonCloseStyle}" 
-                            Template="{StaticResource ResourceKey=CrossButtonTemplate}" 
-                            Click="CloseButtonClick"/>
-                </StackPanel>
-            </Grid>
-        </Grid>
-        <Grid Grid.Row="1">
-            <Frame x:Name="GuidContentFrame" 
-                   NavigationUIVisibility="Hidden" 
-                   Source="{Binding FramePageSource}">
-            </Frame>
-        </Grid>
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="120"/>
-                <ColumnDefinition Width="120"/>
-                <ColumnDefinition Width="50"/>
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="1" 
-                    Height="30" 
-                    Width="100" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center"
-                    IsEnabled="{Binding LastStepEnabled}"
-                    Command="{Binding LastStepCommand}">
-                <TextBlock Text="上一步" FontSize="12" Style="{StaticResource BaseLabelFontFamilyStyle}"/>
-            </Button>
-            <Button Grid.Column="2" 
-                    Height="30" 
-                    Width="100" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center"
-                    Command="{Binding NextStepCommand}">
-                <TextBlock Text="{Binding NextButtonText}" 
-                           FontSize="12" 
-                           Style="{StaticResource BaseLabelFontFamilyStyle}"/>
-            </Button>
-        </Grid>
-    </Grid>
-</Window>
+
+</mah:MetroWindow>
